--- a/welcome.properties
+++ b/welcome.properties
@@ -5,4 +5,4 @@ spring.boot.admin.client.url=http://localhost:1111/
 #management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 management.endpoints.web.exposure.include=*, refresh
-msg= welcome Api
+msg= From welcome Api properties file
