--- a/greet.yml
+++ b/greet.yml
@@ -1,1 +1,1 @@
-msg: Good Morning My Dear Best Friend.. from Greet Api properties file
+msg: Good Morning My Dear Best Friend.. from Greet Api yml file
